SIP-8889: Fix drag conflict with perfect scrollbar

--- a/sip-web/src/app/modules/analyze/designer/settings/selected-fields/designer-selected-fields.component.scss
+++ b/sip-web/src/app/modules/analyze/designer/settings/selected-fields/designer-selected-fields.component.scss
@@ -49,31 +49,39 @@
     border-right: none;
   }
 
-  .selected-fields__list {
-    width: 100%;
-    height: 32px;
-    max-height: 32px;
-    padding: 2px;
-    min-height: 24px;
+  perfect-scrollbar {
+    max-height: 32px !important;
+
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
     border: 1px solid $primary-grey-g1;
-    overflow: hidden;
 
     &.highlighted {
       border: 1px solid $primary-blue-b2;
     }
 
-    ::ng-deep .mat-chip-list-wrapper {
-      max-height: 28px;
-      height: 28px;
-      overflow-y: auto;
-      padding-top: 1px;
-      margin: 0;
-    }
+    ::ng-deep .ps {
+      min-width: 100% !important;
 
-    ::ng-deep .ps > .ps__rail-y {
-      opacity: 0.6;
+      & > .ps__rail-y {
+        opacity: 0.6;
+      }
+    }
+  }
+
+  .selected-fields__list {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 30px;
+    max-height: 30px;
+    padding: 2px;
+    min-height: 24px;
+
+    ::ng-deep .mat-chip-list-wrapper {
+      max-height: 26px;
+      height: 26px;
+      margin: 0;
     }
   }
 }
